--- a/diseño/styles.css
+++ b/diseño/styles.css
@@ -21,7 +21,7 @@ header{
     gap: 240px;
 }
 
-header img{
+.logo{
     width: 108px;
 }
 
@@ -109,3 +109,161 @@ nav ul li{
     font-size: 36px;
     line-height: 42px;
 }
+
+.contenedor2{
+    display: flex;
+    height: 428px;
+    flex-wrap: wrap;
+    justify-content: center;
+    background: #FAFAFA;
+    align-items: center;
+}
+
+.contenedor2 article{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 530px;
+    height: 162px;
+    margin: 30px 0 0 0;
+}
+
+.contenedor2 button{
+    align-self: flex-start;
+    width: 69px;
+    height: 43px;
+    background-color: #8B48BF;
+    color: #FFFFFF;
+    border: none;
+    border-radius: 30px;
+}
+
+.contenedor2 article div{
+    height: 100%;
+}
+
+.contenedor2 h4{
+    display: flex;
+    align-items: center;
+    font-weight: 700;
+    height: 43px;
+}
+
+.contenedor2 article p{
+    color: #B3B2B7;
+    width: 437px;
+    height: 104px;
+    line-height: 26px;
+    letter-spacing: -0.01em;
+    text-align: left;
+}
+
+.contenedor3{
+    height: 900px;
+}
+
+.contenedor4{
+    display: flex;
+    flex-direction: row;
+    background-color: #8B48BF;
+    height: 224px;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.contenedor4 h2{
+    font-size: 40px;
+    width: 420px;
+    height: 96px;
+    font-weight: 700;
+    color: #FFFFFF;
+    line-height: 50px;
+}
+
+.contenedor4 button{
+    border: none;
+    border-radius: 40px;
+    font-size: 13px;
+    width: 134px;
+    height: 44px;
+    color: #8B48BF;
+    box-shadow: 0px 4px 7px rgba(0, 0, 0, 0.25);
+}
+
+footer{
+    display: flex;
+    position: relative;
+    color: #FFFFFF;
+    height: 247px;
+    background-color: black;
+    justify-content: space-around;
+    align-items: center;
+}
+
+footer .redesSociales{
+    display: flex;
+    flex-direction: column;
+    width: 150px;
+    height: 130px;
+    justify-content: space-between;
+}
+
+.imgRedesSociales{
+    display: flex;
+    justify-content: space-between;
+}
+
+footer .navegacion{
+    display: flex;
+    justify-content: space-between;
+    width: 400px;
+    height: 130px;
+}
+
+footer .navegacion ul{
+    display: flex;
+    flex-direction: column;
+    list-style-type: none;
+    gap: 15px;
+}
+
+footer .navegacion ul li{
+    font-weight: 400;
+}
+
+.buscador{
+    height: 130px;
+}
+
+.buscador input{
+    width: 244px;
+    height: 44px;
+    border: none;
+    border-radius: 50px;
+    font-size: 13px;
+    padding-left: 10px;
+    box-sizing: border-box;
+}
+
+.buscador button{
+    height: 42px;
+    width: 60px;
+    background: #8B48BF;
+    color: #FFFFFF;
+    border: none;
+    border-radius: 50px;
+    font-size: 13px;
+}
+
+.copyright{
+    position: absolute;
+    bottom: 30px;
+    right: 150px;
+    color: #8C8C94;
+    font-size: 12.5px;
+}
+
+
+
+
+
