--- a/diseño/styles.css
+++ b/diseño/styles.css
@@ -131,6 +131,7 @@ nav ul li{
 
 .contenedor2 article{
     display: flex;
+    flex-direction: column;
     justify-content: space-around;
     align-items: center;
     width: 530px;
@@ -148,7 +149,10 @@ nav ul li{
 }
 
 .contenedor2 article div{
-    height: 100%;
+    width: 100%;
+    display: flex;
+    height: 43px;
+    gap: 23px;
 }
 
 .contenedor2 h4{
@@ -160,11 +164,13 @@ nav ul li{
 
 .contenedor2 article p{
     color: #B3B2B7;
-    width: 437px;
+    width: 100%;
     height: 104px;
     line-height: 26px;
     letter-spacing: -0.01em;
     text-align: left;
+    padding-left: 92px;
+    box-sizing: border-box;
 }
 
 .contenedor3{
@@ -328,7 +334,7 @@ footer .navegacion ul li{
 .copyright{
     position: absolute;
     bottom: 30px;
-    align-self: center;
+    right: 100px;
     color: #8C8C94;
     font-size: 12.5px;
 }
@@ -385,10 +391,43 @@ footer .navegacion ul li{
 
     .contenedor2{
         height: 800px;
+        justify-content: flex-end;
+    }
+
+    .contenedor2 article{
+        width: 446px;
+        height: 214px;
+    }
+
+    .contenedor2 article div{
+        background: #8B48BF4D;
+        border-top-left-radius: 30px;
+        border-bottom-left-radius: 30px;
+    }
+
+    .contenedor2 article p{
+        padding-left: 0;
+        width: 428px;
+        padding: 0 10px;
     }
 
     .contenedor3{
-        height: 540px;
+        height: auto;
+        min-height: 540px;
+    }
+
+    .reseñas{
+        flex-direction: column;
+        align-items: center;
+        gap: 50px;
+    }
+
+    .reseñas article:nth-child(1), .reseñas article:nth-child(3){
+        display: none;
+    }
+
+    .contenedor3 button{
+        display: block;
     }
 
     .contenedor4{
@@ -445,6 +484,11 @@ footer .navegacion ul li{
 
     .buscador input{
         width: 308px;
+    }
+
+    .copyright{
+        align-self: center;
+        right: auto;
     }
 
 }
